tests/fail/ch_stable/input_not_str.stderr
error[E0308]: mismatched types
 --> tests/fail/ch_stable/input_not_str.rs:2:20
  |
2 |     sscanf::scanf!(5usize, "{}", usize);
  |                    ^^^^^^ expected `str`, found `usize`
  |
  = note: expected reference `&str`
             found reference `&usize`

error[E0308]: mismatched types
 --> tests/fail/ch_stable/input_not_str.rs:3:20
  |
3 |     sscanf::scanf!(b"5", "{}", usize);
  |                    ^^^^ expected `str`, found `&[u8; 1]`
  |
  = note: expected reference `&str`
             found reference `&&'static [u8; 1]`
